# trie

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO  contributors.txt  file
include/: Dictionnary.h  Levenshtein.h  Node.h  Trie.h
src/: Dictionnary.cpp  Levenshtein.cpp  Node.cpp  Trie.cpp  main.cpp  main2.cpp
